# denticheck

./: .gitattributes  .gitignore  DentalEntity.java  LICENSE  README.md  README_EN.md  README_KR.md  docker-compose.local.yml  milestone_admin_system.md  query.json  query_daily.json  query_debug.json  query_dentist.json
ai/: .env.example  .gitignore  DentiCheck_AI_Knowledge_System.md  HANDOVER.md  README.md  check_milvus.py  pyproject.toml  rag_demo.py  report_demo.py  requirements.txt
ai/data/: snudh_knowledge.json
ai/docker/: Dockerfile  docker-compose.local.yml
ai/docs/: BACKEND_MIGRATION_GUIDE.md  PDF_GENERATION_GUIDE.md  database_schema_example.sql  integration_bridge_guide.md
ai/scripts/: download_models.sh  smoke_test.sh
ai/src/denticheck_ai/api/: main.py
ai/src/denticheck_ai/api/routers/: chat.py  detect.py  quality.py  report.py
ai/src/denticheck_ai/core/: settings.py
ai/src/denticheck_ai/pipelines/decision/: decision_model.py  dry_run_rules.py  rules.py
ai/src/denticheck_ai/pipelines/detect/: service.py
ai/src/denticheck_ai/pipelines/llm/: client.py  prompts.py
ai/src/denticheck_ai/pipelines/rag/: ingest.py  retrieve.py  service.py
ai/src/denticheck_ai/pipelines/rag/crawler/: snudh_crawler.py
ai/src/denticheck_ai/schemas/: detect.py  quality.py
ai/yolo/: data.yaml  make_report.py  merge_4class.py
ai/yolo/runs/4class_s_100/: args.yaml  results.csv
ai/yolo/runs/detect/poc_input/poc_report/: caries1_decision_record.json
ai/yolo/runs/predict_debug_conf005/labels/: caries1.txt
api/: .dockerignore  .env.example  .gitattributes  (+20 more)
(+420 files in other folders)
