[tool.poetry]
name = "denticheck-ai"
version = "0.1.0"
description = "Denticheck AI Service (YOLO, ML, LLM/RAG)"
authors = ["DentiCheck Team"]
readme = "README.md"
packages = [{include = "denticheck_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
ultralytics = "^8.2.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
openai = "^1.30.1"
langchain = "^0.2.1"
langchain-milvus = "^0.1.0"
langchain-community = "^0.2.1"
langchain-huggingface = "^0.0.3"
langchain-text-splitters = "^0.2.0"
pymilvus = "^2.4.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
